--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tipografia:\r font-family: 'Oswald', sans-serif;",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon -e js ./src/bin/www"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   }
 }
