--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/0921CDFSNCN22LAED/grupo-07#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.4",
     "node": "^17.2.0",
     "nodemon": "^2.0.15"
   }
