--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
     "node": "^17.2.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.13.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
