--- a/website/package.json
+++ b/website/package.json
@@ -31,6 +31,7 @@
     "node": "^17.2.0",
     "nodemon": "^2.0.15",
     "sequelize": "^6.13.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "validator": "^13.7.0"
   }
 }
