--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -29,6 +30,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "node": "^17.2.0",
+    "node-fetch": "^3.2.1",
     "nodemon": "^2.0.15",
     "sequelize": "^6.13.0",
     "sequelize-cli": "^6.4.1",
